--- a/ue_app/static/css/main/base.css
+++ b/ue_app/static/css/main/base.css
@@ -264,6 +264,11 @@ box-icon{
     align-items: center;
     margin-right: 10px;
 }
+.channel-name span{
+    font-weight: 300;
+    color: #555555;
+    font-size: 11px;
+}
 .channel-name p{
     text-overflow: ellipsis;
 }
@@ -445,7 +450,7 @@ box-icon{
 }
 .content-title{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     margin-top: 30px;
     margin-bottom: 20px;
 }
@@ -677,7 +682,7 @@ form{
     width: 100%;
     height: fit-content;
     padding: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 3px;
 }
 .fieldWrapper{
     width: 100%;
@@ -1246,10 +1251,16 @@ hr{
 }
 
 .comment-container{
-    margin-top: 20px;
+    top: 0;
+    left: 0;
+    right: 0;
     border: thin solid var(--gbg);
-    
+    position: fixed;
     width: 100%;
+    display: none;
+    padding: 20px;
+    z-index: 10000;
+    background: #fff;
 }
 .comment-container .channel-photo{
     display: flex;
@@ -1301,7 +1312,7 @@ hr{
 .user-comment-section form{
     background: none;
 }
-.user-comment-section textarea[name="comment"]{
+.user-comment-section textarea{
     background: none;
     border: thin solid var(--gbg);
     font-size: 10px;
@@ -1313,21 +1324,29 @@ hr{
     padding: 4px;
     color: #555555;
 }
-.user-comment-section textarea[name="comment"]:focus{
+.user-comment-section textarea:focus{
     outline: none;
 }
 .comment-article{
     width: 100%;
     border-bottom: thin solid var(--gbg);
-    padding: 20px;
+    padding: 10px 20px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background: #fff;
 }
 .medium-comments{
     width: 100%;
+    overflow-y: scroll;
+    height: 500px;
 }
 .medium-comments .comment{
     width: 100%;
     border-bottom: thin solid var(--gbg);
-    padding: 20px;
+    padding: 20px 0;
+    max-height: 250px;
+    overflow-y: scroll;
 }
 .comment-image{
     display: flex;
@@ -1353,4 +1372,55 @@ hr{
     padding: 5px auto auto 0;
     border: none;
     margin-left: 25px;
+}
+
+/* Reply Comment Styling */
+.reply-button{
+    background: none;
+    border: none;
+    color: var(--bg);
+    margin-left: 40px;
+    cursor: pointer;
+    font-size: 11px;
+}
+.reply-button:hover{
+    color: var(--lobg);
+}
+.reply-comment-form-container{
+    display: none;
+    height: 0;
+    transition: all 1s;
+}
+.display-reply-comment-container{
+    display: block;
+    height: auto;
+    transition: all 1s;
+}
+.comment-form-hide{
+    display: none;
+}
+/* .comment-reply{
+    border-bottom: thin solid var(--gbg);
+} */
+.add-comment-button{
+    position: fixed;
+    bottom: 10%;
+    right: 10%;
+    width: fit-content;
+    height: fit-content;
+    cursor: pointer;
+}
+.add-comment-button:hover{
+    fill: rgb(255, 125, 3);
+}
+.hide-comment-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    width: 30px;
+    padding: 5px;
+    border-radius: 50%;
+    background-color: var(--gbg);
+    cursor: pointer;
 }
